--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.4.2
 bcrypt==3.1.7
+blinker==1.4
 cffi==1.14.0
 click==7.1.2
 configparser==5.0.0
@@ -8,6 +9,7 @@ email-validator==1.1.1
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-MySQLdb==0.2.0
 Flask-Script==2.0.6
@@ -16,12 +18,14 @@ Flask-WTF==0.14.3
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lxml==4.5.1
 Mako==1.1.3
 MarkupSafe==1.1.1
 mysqlclient==1.4.6
 Pillow==7.1.2
 pycparser==2.20
 python-dateutil==2.8.1
+python-docx==0.8.10
 python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.3.17
